finita navbar con hr e parte sotto

--- a/index.html
+++ b/index.html
@@ -24,66 +24,102 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Giochi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
-                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
-                        </ul>
-                    </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Giochi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            </a>
+                            <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
+                                    <li>
+                                        <i class="fas fa-circle"></i> sub link acquisti
+                                        <i class="fas fa-circle"></i> sub link
+                                        <i class="fas fa-circle"></i> sub link
+                                    </li> 
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            </a>
+                            <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
+                                    <li>
+                                        <i class="fas fa-circle"></i> sub link acquisti
+                                        <i class="fas fa-circle"></i> sub link
+                                        <i class="fas fa-circle"></i> sub link
+                                    </li> 
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            </a>
+                            <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
+                                    <li>
+                                        <i class="fas fa-circle"></i> sub link acquisti
+                                        <i class="fas fa-circle"></i> sub link
+                                        <i class="fas fa-circle"></i> sub link
+                                    </li> 
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            </a>
+                            <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
+                                    <li>
+                                        <i class="fas fa-circle"></i> sub link acquisti
+                                        <i class="fas fa-circle"></i> sub link
+                                        <i class="fas fa-circle"></i> sub link
+                                    </li> 
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            </a>
+                            <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
+                                    <li>
+                                        <i class="fas fa-circle"></i> sub link acquisti
+                                        <i class="fas fa-circle"></i> sub link
+                                        <i class="fas fa-circle"></i> sub link
+                                    </li> 
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            </a>
+                            <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
+                                    <li>
+                                        <i class="fas fa-circle"></i> sub link acquisti
+                                        <i class="fas fa-circle"></i> sub link
+                                        <i class="fas fa-circle"></i> sub link
+                                    </li> 
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -108,7 +144,7 @@
                     </ul>
                 </div>
             </div>
-          </nav>
+        </nav>
     </header>
     
     <!-- **********/siteheader*************** -->
