--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Giochi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            <img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
@@ -42,7 +43,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
@@ -58,7 +59,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
@@ -74,7 +75,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
@@ -90,7 +91,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
@@ -106,7 +107,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
@@ -126,7 +127,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown d-flex align-items-center">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
+                            My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS7</a></li>
