fatta ombra hover nella navbar

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
-                                <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
-                                    <li>
-                                        <i class="fas fa-circle"></i> sub link acquisti
-                                        <i class="fas fa-circle"></i> sub link
-                                        <i class="fas fa-circle"></i> sub link
-                                    </li> 
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                                <li class="d-block w-100"><hr class="dropdown-divider w-100">
+                                </li>
+                                <li>
+                                    <i class="fas fa-circle"></i> sub link acquisti
+                                    <i class="fas fa-circle"></i> sub link
+                                    <i class="fas fa-circle"></i> sub link
+                                </li> 
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -47,8 +48,8 @@
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -63,8 +64,8 @@
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -79,8 +80,8 @@
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -95,8 +96,8 @@
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -111,8 +112,8 @@
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -131,8 +132,8 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS7</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
-                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
                             </ul>
                         </li>
                         <li class="d-flex align-items-center">
