--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                             <img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100">
                                 </li>
                                 <li>
@@ -47,9 +47,9 @@
                             Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -63,9 +63,9 @@
                             Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -79,9 +79,9 @@
                             Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -95,9 +95,9 @@
                             Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -111,9 +111,9 @@
                             Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu flex-wrap" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
                                 <li class="d-block w-100"><hr class="dropdown-divider w-100"></li>
                                     <li>
                                         <i class="fas fa-circle"></i> sub link acquisti
@@ -131,9 +131,9 @@
                             My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt=""><img class="chevron_op" src="./img/chevron-down-solid-hover.svg" alt="">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS7</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
-                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS7</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="./img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
                             </ul>
                         </li>
                         <li class="d-flex align-items-center">
@@ -471,7 +471,7 @@
             </div>
 
             <div class="hidden col-md-6 col-xl-6 right">
-                <img src="/img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
             </div>
         </div>
     </section>
@@ -529,7 +529,7 @@
             </div>
 
             <div class="hidden col-md-6 col-xl-6 right">
-                <img src="/img/ps-now-april-featured-image-block.png" alt="">
+                <img src="./img/ps-now-april-featured-image-block.png" alt="">
             </div>
         </div>
     </section>
